--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -46,6 +46,6 @@ services:
     image: swaggerapi/swagger-ui
     container_name: RTM_Swagger_Docs
     environment:
-    - "API_URL=http://104.131.34.144:1337/v1/swagger.json"
+    - "API_URL=http://report-type-mapper.hdap.gatech.edu:1337/v1/swagger.json"
     ports:
       - "3000:8080"
