--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,7 +5,7 @@ volumes:
   redisdata:
 
 services:
-  mapper-pg:
+  postgres:
     image: postgres
     #restart: always
     container_name: 'RTM_POSTGRES'
@@ -14,7 +14,7 @@ services:
       POSTGRES_USER: sails
       POSTGRES_DB: report-type-mapper
     ports:
-      - "5432:5444"
+      - "5432:5432"
     volumes:
       - 'pgdata:/var/lib/postgresql/data/'
   api:
@@ -24,7 +24,7 @@ services:
     ports:
       - "1338:1337"
     depends_on:
-      - mapper-pg
+      - postgres
       - redis
     # env_file: .env
     environment:
