--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.gatech.edu/HDAP/report-type-mapper-api.git
 [submodule "auto-mapper"]
 	path = auto-mapper
-	url = https://github.gatech.edu/HDAP/report-type-mapper.git
+	url = https://github.gatech.edu/HDAP/report-tagging.git
