--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 volumes:
   pgdata:
   redisdata:
+  auto-mapper-pgdata:
 
 services:
   postgres:
@@ -17,6 +18,7 @@ services:
       - "5432:5432"
     volumes:
       - 'pgdata:/var/lib/postgresql/data/'
+
   api:
     build: ./api
     container_name: RTM_Backend
@@ -40,6 +42,28 @@ services:
   #     - ./client:/app
   #   ports:
   #     - "8000:8000"
+  auto-mapper-api:
+    container_name: AUTO_MAPPER_API
+    build:
+      context: ./auto-mapper
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    depends_on:
+      - auto-mapper-pg
+    volumes:
+      - ./auto-mapper:/api
+  auto-mapper-pg:
+    image: postgres
+    container_name: 'AUTO_MAPPER_PG'
+    environment:
+      POSTGRES_PASSWORD: pg
+      POSTGRES_USER: pg
+      POSTGRES_DB: postgres
+    ports:
+      - "5433:5433"
+    volumes:
+      - 'auto-mapper-pgdata:/var/lib/postgresql/data/'
   redis:
     image: redis:3.2.0
     container_name: RTM_Redis
