--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,28 +42,28 @@ services:
   #     - ./client:/app
   #   ports:
   #     - "8000:8000"
-  auto-mapper-api:
-    container_name: AUTO_MAPPER_API
-    build:
-      context: ./auto-mapper
-      dockerfile: Dockerfile
-    ports:
-      - "5000:5000"
-    depends_on:
-      - auto-mapper-pg
-    volumes:
-      - ./auto-mapper:/api
-  auto-mapper-pg:
-    image: postgres
-    container_name: 'AUTO_MAPPER_PG'
-    environment:
-      POSTGRES_PASSWORD: pg
-      POSTGRES_USER: pg
-      POSTGRES_DB: postgres
-    ports:
-      - "5433:5433"
-    volumes:
-      - 'auto-mapper-pgdata:/var/lib/postgresql/data/'
+  # auto-mapper-api:
+  #   container_name: AUTO_MAPPER_API
+  #   build:
+  #     context: ./auto-mapper
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "5000:5000"
+  #   depends_on:
+  #     - auto-mapper-pg
+  #   volumes:
+  #     - ./auto-mapper:/api
+  # auto-mapper-pg:
+  #   image: postgres
+  #   container_name: 'AUTO_MAPPER_PG'
+  #   environment:
+  #     POSTGRES_PASSWORD: pg
+  #     POSTGRES_USER: pg
+  #     POSTGRES_DB: postgres
+  #   ports:
+  #     - "5433:5433"
+  #   volumes:
+  #     - 'auto-mapper-pgdata:/var/lib/postgresql/data/'
   redis:
     image: redis:3.2.0
     container_name: RTM_Redis
@@ -71,10 +71,10 @@ services:
       - "6379:6379"
     volumes:
     - 'redisdata:/data'
-  swagger:
-    image: swaggerapi/swagger-ui
-    container_name: RTM_Swagger_Docs
-    environment:
-    - "API_URL=http://localhost:1337/v1/swagger.json"
-    ports:
-      - "3000:8080"
+  # swagger:
+  #   image: swaggerapi/swagger-ui
+  #   container_name: RTM_Swagger_Docs
+  #   environment:
+  #   - "API_URL=http://localhost:1337/v1/swagger.json"
+  #   ports:
+  #     - "3000:8080"
